# reviewer2-on-demand

./: GUIDELINE_CODING.md  README.md  app.py  pyproject.toml  requirements.txt
config/: default.yaml
inputs/: papers.csv
outputs/aggregates/: run_pilot001.jsonl
pipelines/: README.md  __init__.py  config.py  paper_review_pipeline.py
schema/: full-20.json
scripts/: validate_jsonl.py
src/cli/: r2.py
src/llms/: README.md  __init__.py  dashscope_client.py  openrouter_client.py
src/minerU/: README.md  minerU.py
src/r2core/: __init__.py  charts.py  config.py  hashing.py  io.py  judges.py  mineru.py  models.py  orchestrator.py  prompts.py  qc.py  review.py  vision.py
tests/: test_cli.py  test_schema.py
tests/snapshots/: cli_review_snapshot.jsonl
